objects/FLODocs__FLO_Change_Approval_Policy__c.object
<CustomObject>
    <description>These records track the persons who need to  approve changes and be alerted when unapproved changes occur.   The audit path identifies key people who need to be alerted in a given context by reason of process, customization type,  specific customization</description>
    <fields>
        <fullName>FLODocs__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It represents the activation of the policy.</description>
        <inlineHelpText>It represents the activation of the policy.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Applications_Control__c</fullName>
        <description>Changes related to AppMenu, CustomApp, Custom Tab, etc</description>
        <inlineHelpText>Changes related to AppMenu, CustomApp, Custom Tab, etc</inlineHelpText>
        <label>Application Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Approvals_Control__c</fullName>
        <description>Changes to Approval Processes</description>
        <inlineHelpText>Changes to Approval Processes</inlineHelpText>
        <label>Approval Process Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Business_Processes_Control__c</fullName>
        <description>Changes to Business Processes</description>
        <inlineHelpText>Changes to Business Processes</inlineHelpText>
        <label>Business Process Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Configuration_And_Rule_Data_Control__c</fullName>
        <label>Application Configuration Changes (Data)</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Assignee_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when there is a control assignee approval in Control Policies</description>
        <inlineHelpText>This is checked when there is a control assignee approval in Control Policies</inlineHelpText>
        <label>Control Assignee Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Changes__c</fullName>
        <description>This is the level of change control required for searches and reports used as controls.</description>
        <inlineHelpText>This is the level of change control required for searches and reports used as controls.</inlineHelpText>
        <label>Control Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked where there is a control owner in Control Policies</description>
        <inlineHelpText>This is checked where there is a control owner in Control Policies</inlineHelpText>
        <label>Control Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Control__c</fullName>
        <description>Changes related to Custom Fields, Custom Objects</description>
        <inlineHelpText>Changes related to Custom Fields, Custom Objects</inlineHelpText>
        <label>Data Model Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Quality_Control__c</fullName>
        <description>This field sets the level of change control required for any changes to any kind of rules</description>
        <inlineHelpText>This field sets the level of change control required for any changes to any kind of rules</inlineHelpText>
        <label>Data Quality Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Security_Control__c</fullName>
        <description>Changes to Data Security Changes, like TransactionSecurity and History Retention Policy</description>
        <inlineHelpText>Changes to Data Security Changes, like TransactionSecurity and History Retention Policy</inlineHelpText>
        <label>Data Security Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Default_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field flags the default rule set for a company.  If populated, it overrides, the standard default of only requiring approval  and communication to the affected process owners</description>
        <inlineHelpText>Set this field to mark this set of rules as the default rule set.  There can be only one for each account.</inlineHelpText>
        <label>Default Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Einstein_Control__c</fullName>
        <description>Changes to WaveApplications and any other Wave Analytics</description>
        <inlineHelpText>Changes to WaveApplications and any other Wave Analytics</inlineHelpText>
        <label>Einstein Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Executive_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A business user of exec. level that needs to approve the change.</description>
        <inlineHelpText>A business user of exec. level that needs to approve the change.</inlineHelpText>
        <label>Executive Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Changes_Approval_Policies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Access_Control__c</fullName>
        <description>Changes to Callcenter components, Community, CustomSite, etc</description>
        <inlineHelpText>Changes to Callcenter components, Community, CustomSite, etc</inlineHelpText>
        <label>External Site Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Final_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The final approver has the final approval right for any affected process. In the event of multiple rules applying, the final approver from the directly affected process will govern.</description>
        <inlineHelpText>This specific approver must approve all changes affected by this rule. This should only be used for highly critical changes since it can create bottlenecks</inlineHelpText>
        <label>Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Changes_Approval_Policies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Flow_Process_Builder_Workflow_Control__c</fullName>
        <description>Change control required for any changes to workflows or any object referred to in a workflow.</description>
        <inlineHelpText>Change control required for any changes to Flows, Workflows, Process Builders or any objects referred to therein.</inlineHelpText>
        <label>Flow, Workflow &amp; Process Builder Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__General_Settings_Control__c</fullName>
        <description>This is the change level required for Salesforce changes to Salesforce setup objects including Settings, enabled features and preferences.</description>
        <inlineHelpText>This is the change level required for Salesforce changes to Salesforce setup objects including Settings, enabled features and preferences</inlineHelpText>
        <label>General Settings Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Health_Check_Control__c</fullName>
        <label>Health Check Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Identity_and_Access_Control__c</fullName>
        <description>This is the level of control required for changes to Identity and Access Changes</description>
        <inlineHelpText>This is the level of control required for changes to Identity and Access Changes</inlineHelpText>
        <label>Identity and Access Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Include_Process_Editors_as_Alternates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field permits approval by process editors in place of  the main process owner.</description>
        <inlineHelpText>Set this field to allow any process editor to approve the change.</inlineHelpText>
        <label>Include Process Editors as Alternates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Instructions__c</fullName>
        <description>These are the instructions for using the FLO Audit / Approval Path record.

FLO Audit / Approval Path records have two functions:

1.  They group processes and customizations into groups for various purposes including audit.

2.  They define the approval rules for changes to processes and customizations.

These rules override a basic rules that every change must be tied to a business process and that the change must be approved by the owner of that process.</description>
        <inlineHelpText>These are the instructions for using the FLO Audit / Approval Path record.</inlineHelpText>
        <label>Instructions:</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Labels_and_Translations_Control__c</fullName>
        <description>This is the level of control required for changes to Labels and Translations</description>
        <inlineHelpText>This is the level of control required for changes to Labels and Translations</inlineHelpText>
        <label>Label and Translation Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Layout_and_Record_Types_Control__c</fullName>
        <description>This is the level of control required for changes to Layouts.</description>
        <inlineHelpText>This is the level of control required for changes to Layouts.</inlineHelpText>
        <label>Layout Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Log_XML_Only_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine if an XML only change will be flag as non compliance</description>
        <inlineHelpText>Determine if an XML only change will be flag as non compliance</inlineHelpText>
        <label>Log XML Only Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Management_Title__c</fullName>
        <description>This is the job title of the management approver</description>
        <inlineHelpText>This is the job title of the management approver</inlineHelpText>
        <label>Management Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Max_of_Approvals_Required__c</fullName>
        <description>This field allows the approval to be considered complete if a given number of approvers have approved the change.  If blank, all approvers are required.</description>
        <inlineHelpText>This field allows the approval to be considered complete if a given number of approvers have approved the change.  If blank, all approvers are required.</inlineHelpText>
        <label>Max # of Approvals Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Merge_Approval_Lists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field toggles on the behavior of merging the approval lists from different approval policies where more than one applies to a given change.</description>
        <inlineHelpText>This field toggles on the behavior of merging the approval lists from different approval policies where more than one applies to a given change.</inlineHelpText>
        <label>Merge Approval Lists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__No_Order_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when no order is required in Management Policies</description>
        <inlineHelpText>This is checked when no order is required in Management Policies</inlineHelpText>
        <label>No Order Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Non_Conf_Change_Customization_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field governs whether customization owners should be alerted of any non-conforming changes to objects affecting their processes.</description>
        <inlineHelpText>Check this field to alert customization owners if any non-conforming changes are made to their customizations.</inlineHelpText>
        <label>Non-Conf Change Customization Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Non_conforming_Change_Process_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field governs whether process owners should be alerted of any non-conforming changes to objects affecting their processes.</description>
        <inlineHelpText>Check this box to alert process owners immediately if there is a non-conforming change to an object tied to one of their processes.</inlineHelpText>
        <label>Non-conforming Change Process Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Other_Changes__c</fullName>
        <description>This is the change control level to be applied to any objects not included in the other categories</description>
        <inlineHelpText>This is the change control level to be applied to any objects not included in the other categories</inlineHelpText>
        <label>Other Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the parent policy for this policy.  Policies inherit properties from parent policies.  Parents are required unless the policy is the top default policy.</description>
        <inlineHelpText>This is the parent policy for this policy.  Policies inherit properties from parent policies.  Parents are required unless the policy is the top default policy.</inlineHelpText>
        <label>Parent Policy</label>
        <referenceTo>FLODocs__FLO_Change_Approval_Policy__c</referenceTo>
        <relationshipName>FLO_Changes_Approval_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Preliminary_Approvers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>These are the users designated to approve changes prior to any approval by process owners.</description>
        <inlineHelpText>Enter specific user designated to approve changes prior to any other approvers.</inlineHelpText>
        <label>Preliminary Approvers</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Changes_Approval_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Procees_Owner_s__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked where there is a process owner approval in Control Policies</description>
        <inlineHelpText>This is checked where there is a process owner approval in Control Policies</inlineHelpText>
        <label>Procees Owner(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_and_Permission_Set_Changes__c</fullName>
        <description>Changes related to PermissionSet and Profiles</description>
        <inlineHelpText>Changes related to PermissionSet and Profiles</inlineHelpText>
        <label>Profile and Permission Set Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Reports_Dashboards_ListViews_Control__c</fullName>
        <description>This is the level of change control required for changes to any search or report not used in a script or workflow and not used as a control.</description>
        <inlineHelpText>This is the level of change control required for changes to any search or report not used in a script or workflow and not used as a control.</inlineHelpText>
        <label>Reports, Dashboards &amp; ListViews Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Require_Affected_Customization_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field specifies whether approval is required from the owner of each item and affected item.</description>
        <inlineHelpText>Check this box to require approval by the owner of each item and affected item.</inlineHelpText>
        <label>Require Affected Customization Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Require_Affected_Process_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field governs whether affected process approval is required.</description>
        <inlineHelpText>Check this box to require approval by all affected processes in addition to designated process.</inlineHelpText>
        <label>Require Affected Process Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Require_Impacted_Customization_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field designates that the owners of any impacted customizations approve changes.</description>
        <inlineHelpText>This field designates that the owners of any impacted customizations approve changes.</inlineHelpText>
        <label>Require Impacted Customization Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Require_Parent_Process_Owner_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox requires approval from all owners of parent processes.</description>
        <inlineHelpText>This checkbox requires approval from all owners of parent processes.</inlineHelpText>
        <label>Require Parent Process Owner Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Require_Related_Process_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box designates that the owner  or editors of any related process must approve any changes impacting objects used in their process. 

A process is related if it isn&apos;t specified but  is related to a specified customization.</description>
        <inlineHelpText>This box designates that the owner  or editors of any related process must approve any changes impacting objects used in their process.

A process is related if it isn&apos;t specified but  is related to a specified customization.</inlineHelpText>
        <label>Require Related Process Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Roles_and_Profiles_Control__c</fullName>
        <description>Changes to Roles, Profiles, Permission Sets, and Permission Set Groups.</description>
        <inlineHelpText>Changes to Roles, Profiles, Permission Sets, and Permission Set Groups.</inlineHelpText>
        <label>Role, Profile &amp; PermissionSet Changes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Log Changes Only</fullName>
                    <default>true</default>
                    <label>Log Changes Only</label>
                </value>
                <value>
                    <fullName>Process Issue Only</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Sandbox Development &amp; Testing</fullName>
                </value>
                <value>
                    <fullName>Full Software Development Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Salesforce_Set_Up_Changes__c</fullName>
        <description>This is the change level required for Salesforce changes to Salesforce setup objects including Sites, Settings, Communities, Sharing Rules, Knowledge bases, sites, enabled features and preferences.</description>
        <inlineHelpText>This is the change level required for Salesforce changes to Salesforce setup objects including Sites, Settings, Communities, Sharing Rules, Knowledge bases, sites, enabled features and preferences.</inlineHelpText>
        <label>Salesforce Set Up Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
</CustomObject>